Puting the function IAppointmentRepository

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,17 @@
    "@typescript-eslint/no-unused-vars": ["error",{
      "argsIgnorePattern": "_"
    }],
+   "@typescript-eslint/naming-convention": [
+     "error",
+     {
+       "seletor": "interface",
+       "format": ["PAscalCase"],
+       "custom": {
+         "regex": "^I[A-Z]",
+         "match":true
+       }
+      }
+    ],
     "import/extensions":[
       "error",
       "ignorePackages",
